# TG-cloud-android

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auto-build.sh
android/: build.gradle.kts  build_trace.txt  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/java/com/telegram/cloud/: MainActivity.kt
android/app/src/main/java/com/telegram/cloud/data/backup/: BackupManager.kt
android/app/src/main/java/com/telegram/cloud/data/local/: CloudEntities.kt
android/app/src/main/java/com/telegram/cloud/data/paging/: CloudFilePagingSource.kt
android/app/src/main/java/com/telegram/cloud/data/prefs/: ConfigStore.kt
android/app/src/main/java/com/telegram/cloud/data/remote/: Balancer.kt  ChunkedDownloadManager.kt  ChunkedUploadManager.kt  StreamingChunkRequestBody.kt  TelegramBotClient.kt  UploadCancellationManager.kt
android/app/src/main/java/com/telegram/cloud/data/repository/: LocalFileRepository.kt  TelegramRepository.kt
android/app/src/main/java/com/telegram/cloud/data/share/: LinkDownloadManager.kt  MultiLinkDownloadManager.kt  MultiLinkGenerator.kt  ShareLinkManager.kt
android/app/src/main/java/com/telegram/cloud/data/sync/: ConflictResolver.kt  SyncConfig.kt  SyncCrypto.kt  SyncEngine.kt  SyncLogDao.kt  SyncLogEntity.kt  SyncLogManager.kt  SyncMetadataDao.kt  SyncMetadataEntity.kt  SyncWorker.kt
android/app/src/main/java/com/telegram/cloud/di/: AppContainer.kt
android/app/src/main/java/com/telegram/cloud/domain/model/: Models.kt
android/app/src/main/java/com/telegram/cloud/gallery/: CloudGalleryScreen.kt  DownloadWorker.kt  GalleryAlbum.kt  GalleryEntities.kt  GalleryGlideModule.kt  GalleryRestoreManager.kt  GalleryRestoreWorker.kt  GallerySyncManager.kt  GalleryViewModel.kt  MediaContextMenu.kt  MediaScanner.kt  MediaViewerScreen.kt  MultiFileGalleryManager.kt  OptimizedGalleryViewModel.kt  SyncNotificationManager.kt  ThumbnailCache.kt  TrashScreen.kt  UploadWorker.kt  ZoomableImage.kt
android/app/src/main/java/com/telegram/cloud/gallery/components/: MediaThumbnail.kt
android/app/src/main/java/com/telegram/cloud/gallery/streaming/: ChunkedStreamingManager.kt
android/app/src/main/java/com/telegram/cloud/tasks/: TaskQueueManager.kt
android/app/src/main/java/com/telegram/cloud/ui/: DashboardActions.kt  MainDialogs.kt  MainViewModel.kt
android/app/src/main/java/com/telegram/cloud/ui/components/: LoadingStates.kt  Shimmer.kt
android/app/src/main/java/com/telegram/cloud/ui/navigation/: Transitions.kt
android/app/src/main/java/com/telegram/cloud/ui/screen/: DashboardScreen.kt  SetupScreen.kt
android/app/src/main/java/com/telegram/cloud/ui/theme/: Elevation.kt  Spacing.kt  Typography.kt
android/app/src/main/java/com/telegram/cloud/ui/wizard/: LanguageComponents.kt  WizardComponents.kt  WizardScreen.kt  WizardState.kt  WizardSteps.kt  WizardViewModel.kt
android/app/src/main/java/com/telegram/cloud/util/: LanguageManager.kt
android/app/src/main/java/com/telegram/cloud/utils/: ErrorRecoveryManager.kt  MediaStoreUtils.kt  MemoryManager.kt
android/app/src/main/java/com/telegram/cloud/utils/cache/: OptimizedImageCache.kt
android/app/src/main/java/com/telegram/cloud/utils/performance/: PerformanceMonitor.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/fastlane/metadata/android/en-US/changelogs/: 1.txt
android/fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt  title.txt
android/gradle/wrapper/: gradle-wrapper.properties
android/keystore/: release-keystore.jks.backup
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/es-ES/changelogs/: 1.txt
metadata/: com.telegram.cloud.yml
telegram-cloud-cpp/: CMakeLists.txt
telegram-cloud-cpp/src/: config.cpp.backup  mainwindow.cpp.backup  telegramhandler.cpp.backup
